--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,7 @@
         "linebreak-style": 0,
         "func-style": 0,
         "arrow-body-style": 0,
-        "react/function-component-definition": 0
+        "react/function-component-definition": 0,
+        "max-len": 1
     }
 }
