--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,7 @@
         "func-style": 0,
         "arrow-body-style": 0,
         "react/function-component-definition": 0,
-        "max-len": 1
+        "max-len": 1,
+        "indent": ["error", 2]
     }
 }
