Add homepage property to package.json

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "website-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://waterloo-rocketry.github.io/website-react",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
