--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,2 @@
-* @waterloo-rocketry/default-reviewers @QuantumManiac @shirleyfyx
+* @waterloo-rocketry/default-reviewers @redstone-ray @shirleyfyx 
 
