--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,15 +7,18 @@
         "plugin:react/recommended",
         "airbnb"
     ],
+    "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaFeatures": {
             "jsx": true
         },
         "ecmaVersion": 12,
-        "sourceType": "module"
+        "sourceType": "module",
+        "project": "./tsconfig.json"
     },
     "plugins": [
-        "react"
+        "react",
+        "@typescript-eslint"
     ],
     "rules": {
         "no-unused-vars": 1,
@@ -26,6 +29,26 @@
         "react/function-component-definition": 0,
         "max-len": 1,
         "indent": ["error", 2],
-        "max-classes-per-file": 0
+        "max-classes-per-file": 0,
+        "react/jsx-filename-extension": [1, { "extensions": [".jsx", ".tsx"] }],
+        "react/require-default-props": 0,
+        "no-undef": 0,
+        "import/extensions": [
+            "error",
+            "ignorePackages",
+            {
+                "js": "never",
+                "jsx": "never",
+                "ts": "never",
+                "tsx": "never"
+            }
+        ]
+    },
+    "settings": {
+        "import/resolver": {
+            "node": {
+                "extensions": [".js", ".jsx", ".ts", ".tsx"]
+            }
+        }
     }
 }
