--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,7 @@
       "dom.iterable",
       "esnext"
     ],
-    "allowJs": true,
-    "skipLibCheck": true,
+    "allowJs": true, // remove after completing refactor!
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
