--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
   "compilerOptions": {
     "target": "es5",
     "lib": [
+      "dom",
+      "DOM.Iterable",
       "esnext"
     ],
     "allowJs": true, // remove after completing refactor!
